# Stepik-CS-course

stepic_algorithms/: CMakeLists.txt  LDS.c++  LIS.c++  backpack.c++  binary_search.c++  calculator.c++  count_sort.c++  cover_point.c++  decode_haffman.c++  edit_distance.c++  haffman.c++  infinite_backpack.c++  merge_sort.c++  priority_queue.c++  quick_sort.c++  stairway.c++  terms.c++
stepic_data_structure/: CMakeLists.txt
stepic_data_structure/basic_structure/: height_of_tree.c++  max_in_window.c++  parentheses.c++  simulation_net_pac.c++  stack_max.c++
stepic_data_structure/hash_table/: find_in_text.c++  hash_chain.c++  phone_book.c++
stepic_data_structure/queue_priority/: create_heap.c++  parallel_process.c++
stepic_data_structure/search_trees/: binary_tree_pass.c++  check_search_tree.c++  common_check_tree.c++  set_with_sum.c++
stepic_data_structure/set_system/: auto_analysis_programm.c++  combine_tabs.c++
